Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importChecks/ImportCanonicalSameName/ImportCanonicalSameName.out
ImportCanonicalSameName.java:13:12: compiler.err.import.requires.canonical: p2.A.I
1 error
